--- a/README
+++ b/README
@@ -1,12 +1,36 @@
-==statisticus
+== Statisticus
 
-Descripion goes here.
+Statisticus aims to do three things well:
+
+* Integrate other workflow tools to statistical analysis: memoization, composition, concurrency, and distributed computing
+* Remove seams from the R runtime and the R bindings (RSRuby)
+* Bridge simple Ruby-centric data containers (hashes, 2-dimensional arrays) into R-centric data containers (lists and data frames)
 
 ==Usage
 
+
+Put all of these into Panorama
+
+Confirm run vs process (from TeguGears)
+
+If you have R code:
+
+If you want to pass the code along:
+
+Dealing with parameter lists
+
+Running this in parallel, memoization
+
+Using DataFrames
+
 ==Installation
 
+sudo gem install davidrichards-statisticus
+
 === Dependencies
+
+* R
+* RSRuby
 
 ==COPYRIGHT
 
