Adding a few more details.

--- a/README
+++ b/README
@@ -9,6 +9,8 @@ Statisticus aims to do three things well:
 ==Usage
 
 
+Decide if I want to move my standard stats libs over here.  Possibly all of Sirb as well?
+
 Put all of these into Panorama
 
 Confirm run vs process (from TeguGears)
